# Ollama_device_controller

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: DeviceController.h  OllamaClient.h
src/: DeviceController.cpp  OllamaClient.cpp  main.cpp
